updating current state before combining/separating out files

--- a/tvm1/lecture1.html
+++ b/tvm1/lecture1.html
@@ -501,7 +501,7 @@
                                 <h2 class="contentTitle">Basic principals of Algebra</h2>
                                 <h4>Reciprocals</h4>
                                 <ul>
-                                    <li>Cancel out variables or numbers by performing the same action to both sides of the equal side. (Multipy, divide, or raise to an exponent)</li>
+                                    <li>Cancel out variables or numbers by performing the same action to both sides of the equal side. (Multiply, divide, or raise to an exponent)</li>
                                     <li>Find the reciprocal of a number by converting the number to a fraction, then switching the numerator and denominator. A number multiplied by its reciprocal equals 1. This makes reciprocals useful for canceling numbers and exponents.</li>
                                 </ul>
                                 <p>Examples of Reciprocals:</p>
@@ -571,7 +571,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <h4>Exercise 1</h4>
+                            <h4>Example Exercise</h4>
                             <p class="question">What would the $100 investment be worth in 10 years at 10% interest?</p>
                             <p>Instructions: Identify the variables in the question. Use a decimal for the interest variable. </p>
 
@@ -1029,7 +1029,8 @@
                             <p>Answer this question:</p>
                             <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
 
-                            <p>Follow the pattern we have used in the previous sample problems. When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
+                            <p>Follow the pattern we have used in the previous sample problems. If you don’t know how to calculate the answer, click Help.</p>
+
                         </div>
                     </div>
                 </div>
@@ -1131,7 +1132,10 @@
                         <div class="content">
                             <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
                             <p class="answer">The answer is 4.7 years.</p>
-                            <p>Did you get the right answer? If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
+                            <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
+                            <hr>
+                            <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
+                            <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
                         </div>
                     </div>
                 </div>
@@ -1149,35 +1153,6 @@
             </div>
 
 
-
-            <!---------------- SLIDE 26  - CONTENT -->
-            <div id="slide26" class="slide stop">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">Equation</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>You have now solved a TVM equation for each of the 4 variables:<br> Present Value, Future Value, Interest, and Time.</p>
-                            <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. Therefore, we won’t go into the other 3 equations that you would otherwise have to memorize. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn pgUp">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">26</div>
-                    </div>
-                </div>
-            </div>
 
 
 
@@ -1198,8 +1173,8 @@
                             <h3>Exercises</h3>
                             <p>It’s important that you grasp the basics of TVM before continuing on to the more advanced tutorials. To help you gauge your understanding of the TVM basics, its time to try some exercises on your own.</p>
                             <h5>Instructions:</h5>
-                            <p><b>There are 15 exercises in this module.</b> You have already completed Exercise 1.</p>
-                            <p>For these individual exercises, do not use the TVM buttons on your financial calculator. All answers should include dollars and cents. Do not enter commas (,) or symbols (% or $). For example, a properly formatted answer looks like this: <span class="answer">1150.38</span></p>
+                            <p><b>There are 14 exercises in this section.</b></p>
+                            <p class="alert">Note: Your answers should include dollars and cents. Do not enter commas (,) or symbols (% or $). For example, a properly formatted answer looks like this: <span class="answer">1150.38</span></p>
                         </div>
                     </div>
                 </div>
