updated format for tvm1, text fixes

--- a/tvm1/help/help1.html
+++ b/tvm1/help/help1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../tvm-styles.css">
+    <link rel="stylesheet" href="../../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -31,7 +31,7 @@
                             <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
                             <p>To figure out how much we will have in 1 year, we need to calculate the interest payment and then add the interest payment back to the initial investment (principal). Here are some tips:
                                 <ul>
-                                    <li>Interest (i) is a rate. Look for a percentage or decimal.</li>
+                                    <li>Interest (i) is a rate. Look for a percent or decimal. <span class="alert">Note: If you are using a financial calculator, use the percent, and if you are figuring the calculations on your own, use the decimal format.</span></li>
                                     <li>Time (n) is an expression of time or number of years. </li>
                                     <li>To distinguish between Present Value (PV) and Future Value (FV), ask yourself whether the dollar amount is money you have now or in the future. Since $100 is today's investment, it must be Present Value (PV). The question asks what it <i>will</i> be worth, indicating we want to find the Future Value (FV).</li>
                                 </ul>
@@ -43,7 +43,7 @@
                             <ul>
                                 <li>Calculate the interest payment.
                                     <ul>
-                                        <li>First identify the interest (i) rate. If necessary, convert the percentage to a decimal.</li>
+                                        <li>First identify the interest (i) rate.</li>
                                         <li>Identify the principal or PV.</li>
                                         <li>Multiply the interest rate times the principal amount.</li>
                                     </ul>
