--- a/tvm1/tvm1-slide2.html
+++ b/tvm1/tvm1-slide2.html
@@ -67,8 +67,8 @@
                 </div>
                 <div class="row">
                     <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn pgDown"><a href="./tvm1-home.html.html">Back</a></button>
-                        <button type="button" class="continue btn pgUp"><a href="./tvm1-slide3.html">Continue</a></button>
+                        <button type="button" class="back btn pgDown"><a href="tvm1-slide1.html">Back</a></button>
+                        <button type="button" class="continue btn pgUp"><a href="tvm1-slide3.html">Continue</a></button>
                     </div>
                 </div>
                 <div class="row">
