--- a/tvm1/help/help2.html
+++ b/tvm1/help/help2.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../tvm-styles.css">
+    <link rel="stylesheet" href="../../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -28,12 +28,12 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <p class="question">How much money would you have in at the end of the second year if you rolled over the $110?</p>
+                            <p class="question">How much money would you have at the end of the second year if you rolled over the $110?</p>
                             <p>Let's rephrase the question to a form you're already familiar with.</p>
                             <p class="question">How much money would you have in a year if you invested $110 at 10% interest?</p>
                             <p>Steps to figure out the answer:
                                 <ul>
-                                    <li>To find out how much we'll have after the 2nd year, we first need to calculate the interest payment for year 2. The interest rate is 10%. This time the principal is $110. To find the interest payment, multiply the interest rate times the principal (PV) amount.
+                                    <li>First, calculate the interest payment. The interest rate is 10%. This time the principal is $110. To find the interest payment, multiply the interest rate times the principal (PV) amount.
                                         <div><img class="math" src="../images/int-yr2-example.svg"></div>
                                     </li>
                                     <li>
