--- a/tvm1/tvm1-slide2.html
+++ b/tvm1/tvm1-slide2.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="row">
                     <div class="col-1">
-                        <div class="page-number"></div>
+                        <div class="page-number">2</div>
                     </div>
                 </div>
             </div>
