--- a/tvm1/tvm1-slide4.html
+++ b/tvm1/tvm1-slide4.html
@@ -58,13 +58,13 @@
                 </div>
                 <div class="row">
                     <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn pgDown">Back</button>
-                        <button type="button" class="continue btn pgUp">Continue</button>
+                        <button type="button" class="back btn pgDown"><a href="tvm1-slide3.html">Back</a></button>
+                        <button type="button" class="continue btn pgUp"><a href="tvm1-slide5.html">Continue</a></button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1">
-                        <div class="page-number">5</div>
+                        <div class="page-number">4</div>
                     </div>
                 </div>
             </div>
