all slides separated into separate files, added navbar to all files

--- a/tvm1/help/help5.html
+++ b/tvm1/help/help5.html
@@ -16,8 +16,6 @@
     <div class="container-fluid">
         <div class="allSlides">
 
-
-            <!---------------- help 5 ************** -->
             <div id="help5" class="slide help-slide">
                 <div class="row slide-title">
                     <div class="col-12">
@@ -25,6 +23,12 @@
                         <h3 class="secondary-title">Help Me!</h3>
                     </div>
                 </div>
+                <nav class="row">
+                    <div class="col-12 col-md-3"><a href="../tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
+                    <div class="col-12 col-md-3"><a href="../tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
+                </nav>
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
