--- a/tvm1/tvm1-3.html
+++ b/tvm1/tvm1-3.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -16,9 +16,6 @@
     <div class="container-fluid">
         <div class="allSlides">
 
-
-
-            <!---------------- SLIDE 3, Content ********************** -->
             <div id="slide3" class="slide">
                 <div class="row slide-title">
                     <div class="col-12">
@@ -27,10 +24,10 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-home.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="../tvm1/help/help-index.html">Math Help</a></div>
+                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                     <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="">Financial Calculator</a></div>
+                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
                     <div class="col-12">
@@ -40,7 +37,7 @@
                             <p>Time Value of Money (TVM) is the equation we use to convert between today's money and money in the future. Transactions operate on this principal every day.</p>
                             <p>Individuals use the TVM equation to plan for retirement savings or to compare the cost of a prospective mortgage or auto loan. Businesses use the equation to compare investments alternatives, to assist decision-makers by converting project opportunities into dollars, or to borrow money from lenders.</p>
 
-                            <div class="text-center bottom-space"><img src="../../images/concept.png" alt="time value money" class="img-fluid"></div>
+                            <div class="text-center bottom-space"><img src="../images/concept.png" alt="time value money" class="img-fluid"></div>
                             <p>For example:</p>
                             <p class="indent">A business usually collects customer accounts at the end of the month, but one customer requests an extension. If the business foregoes the payment for a while, the business should be compensated for the delay. What factors would be considered in determining how much the customer should pay at a later date?</p>
                             <p>Most lenders would want to know:
@@ -57,8 +54,8 @@
                 </div>
                 <div class="row">
                     <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn pgDown"><a href="tvm1-slide2.html">Back</a></button>
-                        <button type="button" class="continue btn pgUp"><a href="tvm1-slide4.html">Continue</a></button>
+                        <button type="button" class="btn"><a href="tvm1-2.html">Back</a></button>
+                        <button type="button" class="btn"><a href="tvm1-4.html">Continue</a></button>
                     </div>
                 </div>
                 <div class="row">
@@ -67,8 +64,6 @@
                     </div>
                 </div>
             </div>
-
-
 
 
 
