--- a/tvm1/tvm1-6.html
+++ b/tvm1/tvm1-6.html
@@ -7,46 +7,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>Math Help Index</title>
+    <title>Time Value of Money - Part 1</title>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="allSlides">
-            <div id="help5" class="slide help-slide">
+
+            <div id="slide6" class="slide">
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">Help Me!</h3>
+                        <h3 class="secondary-title">TVM Equation</h3>
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="../tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="../tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
+                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <p>Put links to each of the math help pages with their description. All math links should like to this index page. or have a button back to the math index page</p>
-                            <ul>
-                                <li><a href="./help1.html">Help 1</a></li>
-                                <li><a href="./help2.html">Help 2</a></li>
-                                <li><a href="./help3.html">Help 3</a></li>
-                                <li><a href="./help4.html">Help 4</a></li>
-                                <li><a href="./help5.html">Help 5</a></li>
-                                <li><a href="./math-basics.html">Basic Math Refresher</a></li>
-                            </ul>
+                            <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example.</p>
+                            <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
+                            <p class="answer">The answer is $110.</p>
+                            <p>Did you get the right answer? Click Help to learn how to calculate the answer.</p>
+
                         </div>
                     </div>
                 </div>
-
+                <div class="row">
+                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                        <button type="button" class="btn"><a href="tvm1-5.html">Back</a></button>
+                        <button type="button" class="btn"><a href="tvm1-7.html">Continue</a></button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-1">
+                        <div class="page-number">6</div>
+                    </div>
+                </div>
             </div>
-
-
 
         </div> <!-- End of allSlides div -->
     </div> <!--  end of container -->
