--- a/tvm1/help/help3.html
+++ b/tvm1/help/help3.html
@@ -25,6 +25,12 @@
                         <h3 class="secondary-title">Help Me!</h3>
                     </div>
                 </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="../tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
+            </nav>
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
