--- a/tvm1/navbar.html
+++ b/tvm1/navbar.html
@@ -1,15 +1,15 @@
 <!-- <div class="row">
     <nav class="slide">
         <li><a href="./lecture1.html">Home</a></li>
-        <li><a href="../tvm1/help/help-index.html">Math Help</a></li>
+        <li><a href="./help/help-index.html">Math Help</a></li>
         <li><a href="./tvm1-exercises.html">Exercises</a></li>
         <li><a href="">Financial Calculator</a></li>
     </nav>
 </div> -->
 
 <nav class="row">
-    <div class="col-12 col-md-3"><a href="./tvm1-home.html">Home</a></div>
-    <div class="col-12 col-md-3"><a href="../tvm1/help/help-index.html">Math Help</a></div>
+    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
     <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-    <div class="col-12 col-md-3"><a href="">Financial Calculator</a></div>
+    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
 </nav>
