--- a/tvm1/tvm1-1.html
+++ b/tvm1/tvm1-1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="allSlides">
 
-            <!---------------- SLIDE 1, Title/Cover slide  *************** -->
+            <!---------------- Title/Cover slide  *************** -->
             <div id="slide1" class="slide background-image">
                 <div class="row slide-title">
                     <div class="col-12">
@@ -24,13 +24,19 @@
                         <h2 class="secondary-title">Part 1: The Basics</h2>
                     </div>
                 </div>
+                <nav class="row">
+                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                </nav>
                 <div class="row">
                     <div class="col-sm-1 offset-sm-1">
                         <!-- <div class="page-number">1</div> -->
                     </div>
                     <div class="offset-5 col-4 offset-md-6">
-                        <button type="button" class="back hide btn"></button>
-                        <button type="button" class="continue btn start pgUp"><a href="tvm1-slide2.html">Start!</a></button>
+                        <button type="button" class="hide btn"></button>
+                        <button type="button" class="btn start"><a href="tvm1-2.html">Start!</a></button>
                     </div>
                 </div>
             </div>
