--- a/tvm1/tvm1-12.html
+++ b/tvm1/tvm1-12.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -16,53 +16,59 @@
     <div class="container-fluid">
         <div class="allSlides">
 
-
-
-
-
-            <!---------------- SLIDE 5 - content ******************* -->
-            <div id="slide5" class="slide">
+            <div id="slide12" class="slide">
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: The Basics</h2>
                         <h3 class="secondary-title">TVM Equation</h3>
                     </div>
                 </div>
-                <div class="row">
-                    <nav class="slide">
-                        <li><a href="./lecture1.html">Home</a></li>
-                        <li><a href="../tvm1/help/help-index.html">Math Help</a></li>
-                        <li><a href="./tvm1-exercises.html">Exercises</a></li>
-                        <li><a href="">Financial Calculator</a></li>
-                    </nav>
-                </div>
+                <nav class="row">
+                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                </nav>
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example.</p>
-                            <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
-                            <p class="answer">The answer is $110.</p>
-                            <p>Did you get the right answer? Click Help to learn how to calculate the answer.</p>
+                            <h4>Exercise 1: Solution</h4>
+                            <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
+                            <p>Let's work through the problem.</p>
+                            <ul>
+                                <li>First, identify the variables:</li>
+                                <div><img class="math" src="../images/variables.svg">
+                                </div>
+                                <li>Once you've identified the variables, plug the numbers into the equation: </li>
+                                <div><img class="math" src="../images/plug-in-numbers.svg">
+                                </div>
+                                <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
+                                <div><img class="math" src="../images/add-numbers.svg">
+                                </div>
 
+                                <li>Next, apply the exponent. Be careful about rounding.</li>
+                                <div><img class="math" src="../images/apply-exponent.svg"></div>
+
+
+                                <li>Finally, do the multiplication.</li>
+                                <div><img class="math" src="../images/fv-answer.svg"></div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back help btn">Help</button>
-                        <button type="button" class="continue btn pgUp">Continue</button>
+                        <button type="button" class="btn"><a href="tvm1-11.html">Back</a></button>
+                        <button type="button" class="btn"><a href="tvm1-13.html">Continue</a></button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1">
-                        <div class="page-number">7</div>
+                        <div class="page-number">12</div>
                     </div>
                 </div>
             </div>
-
-
-
-
 
 
         </div> <!-- End of allSlides div -->
