--- a/tvm1/tvm1-2.html
+++ b/tvm1/tvm1-2.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -17,7 +17,6 @@
         <div class="allSlides">
 
 
-            <!---------------- SLIDE 2, Content  *************** -->
             <div id="slide2" class="slide">
                 <div class="row slide-title">
                     <div class="col-12">
@@ -26,15 +25,14 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-home.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="../tvm1/help/help-index.html">Math Help</a></div>
+                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                     <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="">Financial Calculator</a></div>
+                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- slide 2, initial state defaults to intro button -->
                             <div id="intro" class="bottom-space">
                                 <h2>Introduction</h2>
                                 <p>This is the first of four tutorials on the Time Value of Money (TVM). In this first part, we'll start with the basic equation and variables. Subsequent tutorials will add complexity by introducing compound interest, payments, and annuities.</p>
@@ -67,8 +65,8 @@
                 </div>
                 <div class="row">
                     <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn pgDown"><a href="tvm1-slide1.html">Back</a></button>
-                        <button type="button" class="continue btn pgUp"><a href="tvm1-slide3.html">Continue</a></button>
+                        <button type="button" class="btn"><a href="tvm1-1.html">Back</a></button>
+                        <button type="button" class="btn"><a href="tvm1-3.html">Continue</a></button>
                     </div>
                 </div>
                 <div class="row">
